--- a/core/templates/users/userlist.html
+++ b/core/templates/users/userlist.html
@@ -12,10 +12,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-
-                <h2 class="display-6 " >All Users</h2>
+                <h2 class="display-6" style="color:{{ cookiecutter.heading_colour }};font-weight:bold;">{{ cookiecutter.project_name }} All Users</h2>
+                {% raw %}
                 <a href="{% url 'create' %}" class="btn btn-success" >Create User</a>
-                
                 <div class="table-responsive mt-3">
                     <table class="display" id="tbldata" style="width:100%">
                       <thead>
@@ -27,16 +26,11 @@
                           <th>Address</th>
                           <th>Pincode</th>
                           <th>Contact</th>
-                          
                           <th>Action</th>
-                          
-                          
                         </tr>
                       </thead>
                       <tbody>
                         {% if object_list %}
-                          
-                
                             {% for post in object_list %}
                               {% if post.user.is_active == True %}
                                 <tr>
@@ -47,28 +41,26 @@
                                     <td>{{ post.address }}</td>
                                     <td>{{ post.pincode }}</td>
                                     <td>{{ post.contact }}</td>
-                                    
                                     <td>
                                       <a href="{% url 'update' post.id %}" class="btn btn-warning">Update</a>
                                       <input type="submit" data="{{post.id}}" class="btn btn-danger delete" value="Delete"></input>
-                                        
                                       </td>
                                 </tr>
                               {% endif %}
                             {% endfor %}
-                          
                         {% else %}
                             <tr>
                                 <td colspan="5">No records found</td>
                             </tr>
-                        
                         {% endif %}
                       </tbody>
                     </table>
                   </div>
+                {% endraw %}
             </div>
         </div>
     </div>
+    {% raw %}
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
@@ -92,21 +84,16 @@
           data:{'del':del, 'csrfmiddlewaretoken': '{{csrf_token}}'},
           method:'POST',
           success: function(response) {
-            
             window.location="{% url 'index' %}"
             },
-           
-
         })
-       
         }
-
-      
       $('.delete').click(function(){
         var del=$(this).attr('data')
         console.log(del)
         deletefunc(del)
       })
     </script>
+  {% endraw %}
 </body>
 </html>
