--- a/core/templates/users/userlist.html
+++ b/core/templates/users/userlist.html
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="display-6" style="color:{{ cookiecutter.heading_colour }};font-weight:bold;">{{ cookiecutter.project_name }} All Users</h2>
-                {% raw %}
+                <h2 class="display-6" style="font-weight:bold;"> All Users</h2>
+                
                 <a href="{% url 'create' %}" class="btn btn-success" >Create User</a>
                 <div class="table-responsive mt-3">
                     <table class="display" id="tbldata" style="width:100%">
@@ -56,11 +56,11 @@
                       </tbody>
                     </table>
                   </div>
-                {% endraw %}
+                
             </div>
         </div>
     </div>
-    {% raw %}
+   
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
@@ -94,6 +94,6 @@
         deletefunc(del)
       })
     </script>
-  {% endraw %}
+  
 </body>
 </html>
