--- a/core/templates/users/createrole.html
+++ b/core/templates/users/createrole.html
@@ -1,5 +1,4 @@
 {% load crispy_forms_tags %}
-{{error}}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -10,20 +9,18 @@
         </div>
 
         <div class="col-sm form-control">
-            <h1>Registration Page</h1>
-            <form action="{% url 'create' %}" method="POST">
+            <h1>Add Role</h1>
+            <form action="{% url 'role' %}" method="POST">
                 {% csrf_token %}
-                {{userform|crispy }}
-                {{profileform|crispy }}
+                {{roleform|crispy }}
 
                 <div style="padding-bottom: 10px">
 
                 </div>
-                <input class="btn btn-success" type="submit" value="Register"></input>
+                <input class="btn btn-success" type="submit" value="Add"></input>
             </form>
         </div>
         <div class="col-sm">
-
         </div>
     </div>
 </div>
