--- a/core/templates/users/updaterole.html
+++ b/core/templates/users/updaterole.html
@@ -8,33 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
+
 {% load crispy_forms_tags %}
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col-sm">
-
             </div>
             <div class="col-sm form-control">
-                <h2 class="display-6">Edit post</h2>
-                <form class="form" action="{% url 'update' post_id %}" method="post">
+                <h2 class="display-6">Edit Role</h2>
+                <form class="form" action="{% url 'updaterole' post_id %}" method="post">
 
                     {% csrf_token %}
-                    {{ userform|crispy }}
-                    {{ profileform|crispy }}
+                    {{ roleform|crispy }}
 
                     <div style="padding-bottom: 10px">
-
                     </div>
                     <button type="submit" class="btn btn-primary">Update</button>
                 </form>
             </div>
             <div class="col-sm">
-
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
