--- a/core/templates/users/userlist.html
+++ b/core/templates/users/userlist.html
@@ -1,99 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"  rel="stylesheet"  crossorigin="anonymous">
-</head>
-<body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="display-6" style="font-weight:bold;"> All Users</h2>
-                
-                <a href="{% url 'create' %}" class="btn btn-success" >Create User</a>
-                <div class="table-responsive mt-3">
-                    <table class="display" id="tbldata" style="width:100%">
-                      <thead>
-                        <tr>
-                          <th>ID</th>
-                          <th>First Name</th>
-                          <th>Last Name</th>
-                          <th>Username</th>
-                          <th>Address</th>
-                          <th>Pincode</th>
-                          <th>Contact</th>
-                          <th>Action</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        {% if object_list %}
-                            {% for post in object_list %}
-                              {% if post.user.is_active == True %}
-                                <tr>
-                                    <td>{{ post.id }}</td>
-                                    <td>{{ post.user.first_name}}</td>
-                                    <td>{{ post.user.last_name}}</td>
-                                    <td>{{ post.user.username }}</td>
-                                    <td>{{ post.address }}</td>
-                                    <td>{{ post.pincode }}</td>
-                                    <td>{{ post.contact }}</td>
-                                    <td>
-                                      <a href="{% url 'update' post.id %}" class="btn btn-warning">Update</a>
-                                      <input type="submit" data="{{post.id}}" class="btn btn-danger delete" value="Delete"></input>
-                                      </td>
-                                </tr>
-                              {% endif %}
-                            {% endfor %}
-                        {% else %}
-                            <tr>
-                                <td colspan="5">No records found</td>
-                            </tr>
-                        {% endif %}
-                      </tbody>
-                    </table>
-                  </div>
-                
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User List</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="display-6 ">All Users</h2>
+        <a href="{% url 'create' %}" class="btn btn-success">Create User</a>
+        <a href="{% url 'managerole' %}" class="btn btn-success">Role Management</a>
+        <hr>
+        <div class="table-responsive mt-3">
+          <table class="display" id="tbldata" style="width:100%">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+                <th>Address</th>
+                <th>Pincode</th>
+                <th>Contact</th>
+                <th>Role</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% if object_list %}
+              {% for post in object_list %}
+              {% if post.user.is_active == True %}
+              <tr>
+                <td>{{ post.id }}</td>
+                <td>{{ post.user.first_name}}</td>
+                <td>{{ post.user.last_name}}</td>
+                <td>{{ post.user.username }}</td>
+                <td>{{ post.address }}</td>
+                <td>{{ post.pincode }}</td>
+                <td>{{ post.contact }}</td>
+                <td>{{ post.role }}</td>
+                <td>
+                  <a href="{% url 'update' post.id %}" class="btn btn-warning">Update</a>
+                  <input type="submit" data="{{post.id}}" class="btn btn-danger delete" value="Delete"></input>
+
+                </td>
+              </tr>
+              {% endif %}
+              {% endfor %}
+
+              {% else %}
+              <tr>
+                <td colspan="5">No records found</td>
+              </tr>
+
+              {% endif %}
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
-   
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <script>
-      {% for msg in messages %}
-        swal('{{msg}}');
-      {% endfor %}
-    </script>
-    <script>
-        $(document).ready(function () {
-                $('#tbldata').DataTable({
-                    pagingType: 'full_numbers',
-                });
-        });
-    </script>
-    <script>
-      function deletefunc(del){
-        $.ajax({
-          url:"{% url 'delete' %}" ,
-          data:{'del':del, 'csrfmiddlewaretoken': '{{csrf_token}}'},
-          method:'POST',
-          success: function(response) {
-            window.location="{% url 'index' %}"
-            },
-        })
-        }
-      $('.delete').click(function(){
-        var del=$(this).attr('data')
-        console.log(del)
-        deletefunc(del)
+  </div>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+    crossorigin="anonymous"></script>
+  <script>
+    {% for msg in messages %}
+    swal('{{msg}}');
+    {% endfor %}
+  </script>
+  <script>
+    $(document).ready(function () {
+      $('#tbldata').DataTable({
+        pagingType: 'full_numbers',
+      });
+    });
+  </script>
+  <script>
+    function deletefunc(del) {
+      $.ajax({
+        url: "{% url 'delete' %}",
+        data: { 'del': del, 'csrfmiddlewaretoken': '{{csrf_token}}' },
+        method: 'POST',
+        success: function (response) {
+
+          window.location = "{% url 'index' %}"
+        },
       })
-    </script>
-  
+
+    }
+
+
+    $('.delete').click(function () {
+      var del = $(this).attr('data')
+      console.log(del)
+      deletefunc(del)
+    })
+  </script>
+
 </body>
+
 </html>
