--- a/core/templates/users/update.html
+++ b/core/templates/users/update.html
@@ -1,40 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-</head>
-
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-            
-            </div>
-            <div class="col-sm form-control">
-                <h2 class="display-6">Edit post</h2>
-                <form class="form" action="{% url 'update' post_id %}" method="post">
-                    {% csrf_token %}                  
+{{error}}
 
-                    {{ userform|crispy }}
-                    {{ profileform|crispy  }}
-                    <div style="padding-bottom: 10px">
+{% block content %}
+<div class="row">
 
-                    </div>
-                    
-                     
-                      <button type="submit" class="btn btn-primary" >Update</button>
-                </form>
-                
-            </div>
-            <div class="col-sm">
-            
-            </div>
-        </div>
+    <div class="col-md-6 offset-3">
+        <h4>Update User Details</h4><hr/>
+        <form class="form" action="{% url 'update' post_id %}" method="post">
+            {% csrf_token %}                  
+            {{ userform|crispy }}
+            {{ profileform|crispy  }}
+            <button type="submit" class="btn btn-primary mt-3" >Update</button>
+        </form>
     </div>
-</body>
 
-</html>
+</div>
+
+{% endblock %}
