--- a/core/templates/users/managers.html
+++ b/core/templates/users/managers.html
@@ -3,7 +3,7 @@
 {%for j in users%}
 
 
-<option value={{ j.id }}>{{ j.user__first_name  }} {{ j.user__last_name  }}</option>
+<option value={{ j.id }}>{{ j.first_name  }} {{ j.last_name  }}</option>
 
 {% endfor %}
 {%endif%}
