role added on navigation panel

--- a/core/templates/users/managerole.html
+++ b/core/templates/users/managerole.html
@@ -3,9 +3,8 @@
 {% block content %}
 <div class="row">
   <div class="col-sm-12">
-    <div>
+    <div class="d-flex justify-content-end mt-3">
       <a href="{% url 'role' %}" class="btn btn-success">Add Role</a>
-      <a href="{% url 'viewrole' %}" class="btn btn-danger">Role Hierarchy</a>
     </div>
     <div class="table-responsive mt-3 col-sm form-control">
       <table class="display" id="tbldata" style="width:100%">
