--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -21,24 +21,39 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               {% if request.user.is_authenticated %}
                 <ul class="navbar-nav">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="{% url "index" %}">Users</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url "managerole" %}">Roles</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Users
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item"  href="{% url "index" %}" >Users</a></li>
+                      <li><a class="dropdown-item"  href="{% url "managerole" %}">Roles</a></li>
+                      <li><a class="dropdown-item"  href="{% url 'viewuser' %}" >User Hierarchy</a></li>
+                    </ul>
                   </li>
                 </ul>
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Roles
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item"  href="{% url 'viewuser' %}" >User Hierarchy</a></li>
+                      <li><a class="dropdown-item"  href="{% url 'managerole' %}" >Role Management</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                
                 <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <b>
-                      <a class="nav-link"> {{request.user|capfirst}}</a>
-                    </b>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-item nav-link" href="{% url 'password_change' %}">Change Password</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url "logout" %}">Logout</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <b>{{request.user|capfirst}}</b>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
                   </li>
                 </ul>
               {% endif %}              
