navigation changes added

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,7 +38,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item"  href="{% url "managerole" %}">Roles</a></li>
-                      <li><a class="dropdown-item"  href="#" >Role Hierarchy</a></li>
+                      <li><a class="dropdown-item"  href="{% url "viewrole" %}" >Role Hierarchy</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
