--- a/core/templates/users/create.html
+++ b/core/templates/users/create.html
@@ -4,50 +4,51 @@
 {{error}}
 
 {% block content %}
-    <div class="row">
-       <div class="col-md-6 offset-3">
-        <h4>Create User</h4><hr/>
+<div class="row">
+    <div class="col-md-6 offset-3">
+        <h4>Create User</h4>
+        <hr />
         <form action="{% url 'create' %}" method="POST" id="personForm"
-        data-managers-url="{% url 'ajax_load_managers' %}">
+            data-managers-url="{% url 'ajax_load_managers' %}">
             {% csrf_token %}
             {{userform|crispy }}
-            {{profileform|crispy  }}
+            {{profileform|crispy }}
             <input class="btn btn-success mt-3" type="submit" value="Register" />
         </form>
-       </div>
     </div>
+</div>
 
 {% endblock %}
 {% block javascript %}
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-        crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+    crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    
-    <script>
-        $("#id_role").change(function () {
-            const url = $("#personForm").attr("data-managers-url")
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-            const roleid = $(this).val();
-        
-            $.ajax({
-                url: url,
-                data: {
-                    'roleid': roleid,
-                    'test':true
-                },
-                success: function (data) {
-                    $("#id_manager").html(data);
+<script>
+    $("#id_role").change(function () {
+        const url = $("#personForm").attr("data-managers-url")
 
-                }
-            });
+        const roleid = $(this).val();
 
+        $.ajax({
+            url: url,
+            data: {
+                'roleid': roleid,
+                'test': true
+            },
+            success: function (data) {
+                $("#id_manager").html(data);
+
+            }
         });
-    </script>
+
+    });
+</script>
 {% endblock %}
