--- a/core/templates/users/managerole.html
+++ b/core/templates/users/managerole.html
@@ -12,7 +12,7 @@
           <tr>
             <th>Roles</th>
             <th>Parent</th>
-            
+
             <th>Action</th>
           </tr>
         </thead>
@@ -23,7 +23,7 @@
           <tr>
             <td>{{i.role}}</td>
             <td>{{i.parent}}</td>
-            
+
             <td>
               <a href="{% url 'updaterole' i.id %}" class="btn btn-warning">Update</a>
               <input type="submit" data="{{i.id}}" class="btn btn-danger deleterole" value="Delete"></input>
@@ -45,45 +45,65 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-      integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-      crossorigin="anonymous"></script>
-    <script>
-      $(document).ready(function () {
-        $('#tbldata').DataTable({
-          pagingType: 'full_numbers',
-        });
-      });
-    </script>
-    <script>
-      {% for msg in messages %}
-      swal('{{msg}}');
-      {% endfor %}
-    </script>
-    <script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+  integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+  crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+  integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+  $(document).ready(function () {
+    $('#tbldata').DataTable({
+      pagingType: 'full_numbers',
+    });
+  });
+</script>
 
-      function deletefunc(del) {
-        $.ajax({
-          url: "{% url 'delrole' %}",
-          data: { 'del': del, 'csrfmiddlewaretoken': '{{csrf_token}}' },
-          method: 'POST',
-          success: function (response) {
-            window.location = "{% url 'managerole' %}"
-          },
-        })
+<script>
+
+  function deletefunc(del) {
+    $.ajax({
+      url: "{% url 'delrole' %}",
+      data: { 'del': del, 'csrfmiddlewaretoken': '{{csrf_token}}' },
+      method: 'POST',
+      success: function (response) {
+        window.location = "{% url 'managerole' %}"
+      },
+    })
+
+  }
+
+  $('.deleterole').click(function () {
+    var del = $(this).attr('data')
+
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+
+      if (result.isConfirmed) {
+        deletefunc(del)
 
       }
+    })
 
-      $('.deleterole').click(function () {
-        var del = $(this).attr('data')
-        console.log(del)
+  })
 
-        deletefunc(del)
-      })
-    </script>
-  {% endblock %}
+
+
+</script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+  {% for msg in messages %}
+  console.log('{{msg}}');
+  new swal('{{msg}}');
+  {% endfor %}
+</script>
+{% endblock %}
