Made required changes

--- a/core/templates/roles/managerole.html
+++ b/core/templates/roles/managerole.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="d-flex justify-content-end mt-3">
-      <a href="{% url 'role' %}" class="btn btn-success">Add Role</a>
+      <a href="{% url 'createrole' %}" class="btn btn-success">Add Role</a>
     </div>
     <div class="table-responsive mt-3 col-sm form-control">
       <table class="display" id="tbldata" style="width:100%">
