--- a/core/templates/users/update.html
+++ b/core/templates/users/update.html
@@ -4,7 +4,8 @@
 {% block content %}
 <div class="row">
     <h4>Update User</h4>
-    <form class="form" action="{% url 'update' post_id %}" method="post">
+    <form class="form" action="{% url 'update' post_id %}" method="post" id="personForm"
+            data-managers-url="{% url 'ajax_load_managers' %}">
         {% csrf_token %}
 
         {{ userform|crispy }}
@@ -18,4 +19,37 @@
     </form>
 
 </div>
+{% endblock %}
+{% block javascript %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+    crossorigin="anonymous"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+    crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<script>
+    $("#id_role").change(function () {
+        const url = $("#personForm").attr("data-managers-url")
+
+        const roleid = $(this).val();
+
+        $.ajax({
+            url: url,
+            data: {
+                'roleid': roleid,
+                'test': true
+            },
+            success: function (data) {
+                $("#id_manager").html(data);
+
+            }
+        });
+
+    });
+</script>
 {% endblock %}
